fixed section header z-index higher than nav

--- a/src/components/styles/navigation.css
+++ b/src/components/styles/navigation.css
@@ -1,6 +1,7 @@
 #nav-container {
     width: 100%;
     height: 50px;
+
 }
 
 #navbar {
@@ -12,6 +13,7 @@
     justify-content: flex-end;
     align-items: center;
     text-decoration: none;
+    z-index: 3;
    
     
     
